--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
     "fantasy-states": "git://github.com/fantasyland/fantasy-states",
     "fantasy-tuples": "0.0.1",
     "immutable": "^3.6.2"
+  },
+  "devDependencies": {
+    "from": "^0.1.3"
   }
 }
