--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "immutable": "^3.6.2"
   },
   "devDependencies": {
-    "from": "^0.1.3"
+    "from": "^0.1.3",
+    "sweet.js": "^0.7.3"
   }
 }
