--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "curry": "^1.2.0",
     "fantasy-states": "git://github.com/fantasyland/fantasy-states",
     "fantasy-tuples": "0.0.1",
+    "highland": "^2.3.0",
     "immutable": "^3.6.2"
   },
   "devDependencies": {
