--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
     "curry": "^1.2.0",
-    "fantasy-states": "git://github.com/fantasyland/fantasy-states",
+    "fantasy-states": "git://github.com/quarterto/fantasy-states#patch-1",
     "fantasy-tuples": "0.0.1",
     "highland": "^2.3.0",
     "immutable": "^3.6.2"
