--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "immutable": "^3.6.2"
   },
   "devDependencies": {
-    "from": "^0.1.3",
-    "lambda-chop": "^0.1.5",
-    "sweet.js": "^0.7.3"
+    "babel": "^4.7.4",
+    "from": "^0.1.3"
   }
 }
